--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;700&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
     <div class="header">
         <h2>
-            <p>frozensoliddesigns</p>
+            <p>frozen solid designs</p>
             <a href="https://www.youtube.com/@frozensoliddesigns"><i class="fa-brands fa-youtube"></i></a>
             <a href="mailto:jason@frozensoliddesigns.com"><i class="fa-solid fa-envelope"></i>jason@frozensoliddesigns.com</a>
         </h2>
@@ -43,7 +43,7 @@
     <div class="last universal">
         <h1><i class="fa-solid fa-mobile-screen-button"></i>&nbsp;&nbsp;App Developement</h1><br>
         <h3 class="fonts">Do you have the perfect idea for an app, but don't know where to start? Let us help</h3><br>
-        <p class="fonts">We use the Dart language and Flutter development kit - both developed and maintained by Google - to build state of the art applications that run on both Android and iOS without the need for creating two code bases. <br><br>Less development time, still compiles and performs as native code.</p>
+        <p class="fonts">We use the Dart language and Flutter development kit - both developed and maintained by Google - to build state of the art applications that run on both Android and iOS without the need for creating two code bases. <br><br>Less development time, still compiles and performs as native code.</p>&nbsp;&nbsp;
     </div>
     <div class="end universal">
         <h1><i class="fa-brands fa-youtube"></i>YouTube</h1>
@@ -52,10 +52,11 @@
         <iframe width="560" height="315" src="https://www.youtube.com/embed/JXO5jIVJ4hE?si=M-ifEPHBwlQ4mQqg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
     </div>
     <footer>
-        <h1>
             <a href="https://www.youtube.com/@frozensoliddesigns"><i class="fa-brands fa-youtube"></i></a>&nbsp;
             <a href="mailto:jason@frozensoliddesigns.com"><i class="fa-solid fa-envelope"></i>&nbsp;&nbsp;jason@frozensoliddesigns.com</a>
-        </h1>
+            <a href="#top">
+                <i class="fa-solid fa-arrow-up"></i>
+            </a>
     </footer>
 </body>
 </html>
