--- a/index.html
+++ b/index.html
@@ -15,20 +15,19 @@
         <h2>
             <p>frozen solid designs</p>
             <a href="https://www.youtube.com/@frozensoliddesigns"><i class="fa-brands fa-youtube"></i></a>
-            <a href="mailto:jason@frozensoliddesigns.com"><i class="fa-solid fa-envelope"></i>jason@frozensoliddesigns.com</a>
+            <a href="mailto:jason@frozensoliddesigns.com" class="mail">&nbsp;jason@frozensoliddesigns.com</a>
         </h2>
     </div>
     <div class="top universal">
         <h1>
-            <i class="fa-solid fa-feather"></i>
-            Affordable <br><br>
+            <h1 class="feather"> Affordable <br><br></h1>
             <h3 class="fonts">We provide solutions for every budget.</h3><br>
             <p class="fonts">From simple static sites to complex custom web software - we will work with you to build what you're looking for.</p><br><br>
         </h1>
     </div>
     <div class="second universal">
-        <h1>
-            <i class="fa-solid fa-wifi"></i>&nbsp;&nbsp;Websites
+        <h1 class="wifi">
+            &nbsp;&nbsp;Websites
         </h1><br>
         <h3>
             Get up and running quickly without breaking the bank
@@ -36,17 +35,17 @@
         <p>Pick from your choice of layouts and features to launch your site in no time!</p><br><br>
     </div>
     <div class="third universal">
-        <h1><i class="fa-solid fa-laptop-code"></i>&nbsp;&nbsp;Custom Software</h1><br>
+        <h1 class="code">&nbsp;&nbsp;Custom Software</h1><br>
         <h3 class="fonts">Have a project that's a bit more complex? We do that too</h3><br>
         <p class="fonts">We will work with you to build your project from the ground up, tailored specifically to your needs.</p><br><br>
     </div>
     <div class="last universal">
-        <h1><i class="fa-solid fa-mobile-screen-button"></i>&nbsp;&nbsp;App Developement</h1><br>
+        <h1 class="mobile">&nbsp;&nbsp;App Developement</h1><br>
         <h3 class="fonts">Do you have the perfect idea for an app, but don't know where to start? Let us help</h3><br>
         <p class="fonts">We use the Dart language and Flutter development kit - both developed and maintained by Google - to build state of the art applications that run on both Android and iOS without the need for creating two code bases. <br><br>Less development time, still compiles and performs as native code.</p>&nbsp;&nbsp;
     </div>
     <div class="end universal">
-        <h1><i class="fa-brands fa-youtube"></i>YouTube</h1>
+        <h1 class="yt">YouTube</h1>
         <div class="video">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/dSs9Km_wIyA?si=dU_2L3frNwBBCphn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/JXO5jIVJ4hE?si=M-ifEPHBwlQ4mQqg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
