--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="header">
         <h2>
             <p>frozen solid designs</p>
-            <a href="https://www.youtube.com/@frozensoliddesigns" class="you"></a>
+            <a href="https://www.youtube.com/@frozensoliddesigns"><i class="fa-brands fa-youtube"></i></a>
             <a href="mailto:jason@frozensoliddesigns.com" class="mail">&nbsp;jason@frozensoliddesigns.com</a>
         </h2>
     </div>
@@ -45,7 +45,7 @@
         <p class="fonts">We use the Dart language and Flutter development kit - both developed and maintained by Google - to build state of the art applications that run on both Android and iOS without the need for creating two code bases. <br><br>Less development time, still compiles and performs as native code.</p>&nbsp;&nbsp;
     </div>
     <div class="end universal">
-        <h1 class="yt">YouTube</h1>
+        <h1><i class="fa-brands fa-youtube"></i>YouTube</h1>
         <div class="video">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/dSs9Km_wIyA?si=dU_2L3frNwBBCphn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/JXO5jIVJ4hE?si=M-ifEPHBwlQ4mQqg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>&nbsp;&nbsp;
